--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <div id="app">
         <g-button></g-button>
     </div>
-    <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script> 
-    <script src="./button.js"></script>
-    <script>
-    new Vue({
-        el: '#app',
-    })
-    </script>
+    <script src="./src/app.js"></script>
 </body>
 </html>
