新增icon和iconPosition属性

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hans">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="./base.css">
 </head>
+
 <body>
     <div id="app">
-        <g-button></g-button>
+        <g-button>
+            设置
+        </g-button>
+        <g-button icon="settings">
+            设置
+        </g-button>
+        <g-button icon="settings" icon-position="right">
+            设置
+        </g-button>
     </div>
     <script src="./src/app.js"></script>
+    <script src="//at.alicdn.com/t/font_1196223_yndapq1fass.js"></script>
 </body>
+
 </html>
