--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <div id="app">
-        <g-button>
+        <g-button :loading="loading1" @click="loading1 = !loading1">
             设置
         </g-button>
-        <g-button icon="settings">
+        <g-button icon="settings" :loading="loading2" @click="loading2 = !loading2">
             设置
         </g-button>
-        <g-button icon="settings" icon-position="right">
+        <g-button icon="settings" icon-position="right" :loading="loading3" @click="loading3 = !loading3">
             设置
         </g-button>
     </div>
