--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <g-button icon="settings" icon-position="right" :loading="loading3" @click="loading3 = !loading3">
             设置
         </g-button>
+        <g-button-group>
+            <g-button icon="left">上一页</g-button>
+            <g-button>更多</g-button>
+            <g-button icon="right"  icon-position="right">下一页</g-button>
+        </g-button-group>
     </div>
     <script src="./src/app.js"></script>
     <script src="//at.alicdn.com/t/font_1196223_bj5a9wd9eo7.js"></script>
