--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </g-button-group>
     </div>
     <script src="./src/app.js"></script>
-    <script src="//at.alicdn.com/t/font_1196223_bj5a9wd9eo7.js"></script>
+    <!-- <script src="//at.alicdn.com/t/font_1196223_bj5a9wd9eo7.js"></script> -->
 </body>
 
 </html>
