--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             <g-col>2</g-col>
         </g-row>
         <g-row>
-                <g-col :span="2">2</g-col>
-                <g-col :span="22">22</g-col>
-            </g-row>
-            <g-row>
-                    <g-col :span="2">2</g-col>
-                    <g-col :span="8">22</g-col>
-                    <g-col :span="14">22</g-col>
+            <g-col :span="2">2</g-col>
+            <g-col :span="20" :offset="2">22</g-col>
+        </g-row>
+        <g-row>
+            <g-col :span="2">2</g-col>
+            <g-col :span="8" :offset="2">22</g-col>
+            <g-col :span="11":offset="1">22</g-col>
 
-                </g-row>
+        </g-row>
         <g-input value="颂乐" disabled></g-input>
         <g-input value="玟星" readonly></g-input>
         <g-input value="辉人"></g-input>
