--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <g-col>2</g-col>
         </g-row> -->
         <g-row>
-            <g-col :span="2" :phone="{span:8}" :ipad="{span:1}">2</g-col>
-            <g-col :span="20" :offset="2" :phone="{span:16}" :ipad="{span:23}">20</g-col>
+            <g-col :span="24" :ipad="{span:1}">2</g-col>
+            <g-col :span="24" :ipad="{span:23}">20</g-col>
         </g-row>
         <!-- <g-row>
             <g-col :span="2">2</g-col>
