新增 row 的测试用例

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <g-col>2</g-col>
         </g-row> -->
         <g-row>
-            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
-                <div class="demo"></div>
+            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}" align="right">
+                <div class="demo">2222</div>
             </g-col>
             <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
                 <div class="demo"></div>
