--- a/index.html
+++ b/index.html
@@ -11,64 +11,23 @@
 
 <body>
     <style>
-    .demo{
-        border: 1px solid red;
-        height: 100px;
-    }
+        .demo {
+            border: 1px solid red;
+            /* min-height: 100px; */
+        }
     </style>
     <div id="app">
-        <!-- <g-row :gutter="20">
-            <g-col>1</g-col>
-            <g-col>2</g-col>
-        </g-row> -->
-        <g-row>
-            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}" align="right">
-                <div class="demo">2222</div>
-            </g-col>
-            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
-                <div class="demo"></div>
-            </g-col>
-            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
-                <div class="demo"></div>
-            </g-col>
-            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
-                <div class="demo"></div>
-            </g-col>
-            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
-                <div class="demo"></div>
-            </g-col>
-            <g-col :span="24" :ipad="{span:12}" :narrow-pc="{span:8}">
-                <div class="demo"></div>
-            </g-col>
-        </g-row>
-        <!-- <g-row>
-            <g-col :span="2">2</g-col>
-            <g-col :span="8" :offset="2">8</g-col>
-            <g-col :span="11" :offset="1">11</g-col>
+        <g-layout style="height:100vh">
+                <g-header class="demo">header</g-header>
+            
+            <g-layout>
+                    <g-sider class="demo">sider</g-sider>
+                <g-content class="demo">content</g-content>
+                
+            </g-layout>
+            <g-footer class="demo">footer</g-footer>
 
-        </g-row>
-        <g-input value="颂乐" disabled></g-input>
-        <g-input value="玟星" readonly></g-input>
-        <g-input value="辉人"></g-input>
-        <g-input value="华" error="姓名不能少于两个字"></g-input>
-        <g-input v-model='message' @change="inputChange"></g-input>
-        <span>{{message}}</span>
-        <div style="margin:20px;">
-            <g-button :loading="loading1" @click="loading1 = !loading1">
-                设置
-            </g-button>
-            <g-button icon="settings" :loading="loading2" @click="loading2 = !loading2">
-                设置
-            </g-button>
-            <g-button icon="settings" icon-position="right" :loading="loading3" @click="loading3 = !loading3">
-                设置
-            </g-button>
-            <g-button-group>
-                <g-button icon="left">上一页</g-button>
-                <g-button>更多</g-button>
-                <g-button icon="right" icon-position="right">下一页</g-button>
-            </g-button-group>
-        </div> -->
+        </g-layout>
 
     </div>
     <script src="./src/app.js"></script>
