--- a/index.html
+++ b/index.html
@@ -10,25 +10,8 @@
 </head>
 
 <body>
-    <style>
-        .demo {
-            border: 1px solid red;
-            /* min-height: 100px; */
-        }
-    </style>
     <div id="app">
-        <g-layout style="height:100vh">
-                <g-header class="demo">header</g-header>
-            
-            <g-layout>
-                    <g-sider class="demo">sider</g-sider>
-                <g-content class="demo">content</g-content>
-                
-            </g-layout>
-            <g-footer class="demo">footer</g-footer>
-
-        </g-layout>
-
+        <button @click="showToast">click</button>
     </div>
     <script src="./src/app.js"></script>
 </body>
