--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
 </head>
 
 <body>
-    <div id="app">
-        <button @click="showToast">click</button>
-    </div>
+    <g-tabs>
+        <g-tabs-head :selected.sync="selectedTab">
+            <g-tabs-item name="woman">
+                women
+            </g-tabs-item>
+            <g-tabs-item name="finance">
+                finance
+            </g-tabs-item>
+            <g-tabs-item name="sports">
+                sports
+            </g-tabs-item>
+        </g-tabs-head>
+        <g-tabs-body>
+            <g-tabs-pane name="woman">
+                about woman
+            </g-tabs-pane>
+            <g-tabs-pane name="finance">
+                about finance
+            </g-tabs-pane>
+            <g-tabs-pane name="sports">
+                about sports
+            </g-tabs-pane>
+        </g-tabs-body>
+    </g-tabs>
     <script src="./src/app.js"></script>
 </body>
 
