--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<div id="app">
     <g-tabs>
         <g-tabs-head :selected.sync="selectedTab">
             <g-tabs-item name="woman">
@@ -34,6 +35,7 @@
             </g-tabs-pane>
         </g-tabs-body>
     </g-tabs>
+</div>
     <script src="./src/app.js"></script>
 </body>
 
