实现 tabs 切换功能

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <g-tabs-item name="sports">
                 sports
             </g-tabs-item>
+            <template slot="actions">
+              <button>setting</button>
+            </template>
         </g-tabs-head>
         <g-tabs-body>
             <g-tabs-pane name="woman">
