--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
 <body>
 
 <div id="app">
-  <div id="app" style="padding-top: 100px; padding-left: 100px;">
-    <g-popover>
-      <template slot="content">
-        <div>popover内容</div>
-      </template>
-      <button>点我</button>
-    </g-popover>
-    <g-popover>
-      <template slot="content">
-        <div>popover内容</div>
-      </template>
-      <button>点我</button>
-    </g-popover>
+  <div style="overflow: hidden; padding: 5px;">
+    <div id="app" style="padding-top: 100px; padding-left: 100px;">
+      <g-popover>
+        <template slot="content">
+          <div>popover内容</div>
+        </template>
+        <button>点我</button>
+      </g-popover>
+      <g-popover>
+        <template slot="content">
+          <div>popover内容</div>
+        </template>
+        <button>点我</button>
+      </g-popover>
+    </div>
+  </div>
 </div>
     <script src="./src/app.js"></script>
 </body>
