--- a/index.html
+++ b/index.html
@@ -12,21 +12,31 @@
 <body>
 
 <div id="app">
-  <div style="overflow: hidden; padding: 5px;">
-    <div id="app" style="padding-top: 100px; padding-left: 100px;">
-      <g-popover>
-        <template slot="content">
-          <div>popover内容</div>
-        </template>
-        <button>点我</button>
-      </g-popover>
-      <g-popover>
-        <template slot="content">
-          <div>popover内容</div>
-        </template>
-        <button>点我</button>
-      </g-popover>
-    </div>
+  <div style="overflow: hidden; padding: 150px;">
+    <g-popover position="bottom">
+      <template slot="content">
+        <div>popover内容</div>
+      </template>
+      <button>点我</button>
+    </g-popover>
+    <g-popover position="top">
+      <template slot="content">
+        <div>popover内容</div>
+      </template>
+      <button>点我</button>
+    </g-popover>
+    <g-popover position="left">
+      <template slot="content">
+        <div>popover内容</div>
+      </template>
+      <button>点我</button>
+    </g-popover>
+    <g-popover position="right">
+      <template slot="content">
+        <div>popover内容</div>
+      </template>
+      <button>点我</button>
+    </g-popover>
   </div>
 </div>
     <script src="./src/app.js"></script>
