--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <div id="app">
   <div style="overflow: hidden; padding: 50px;">
     <g-popover position="bottom">
-      <template slot="content">
-        <div>popover内容</div>
+      <template slot="content" slot-scope="{close}">
+        <div>popover内容
+          <g-button @click="close">close</g-button>
+        </div>
       </template>
       <g-button>点我</g-button>
     </g-popover>
