--- a/index.html
+++ b/index.html
@@ -12,60 +12,11 @@
 <body>
 
 <div id="app">
-  <div style="overflow: hidden; padding: 50px;">
-    <g-popover position="bottom">
-      <template slot="content" slot-scope="{close}">
-        <div>popover内容
-          <g-button @click="close">close</g-button>
-        </div>
-      </template>
-      <g-button>点我</g-button>
-    </g-popover>
-    <g-popover position="top">
-      <template slot="content">
-        <div>popover内容</div>
-      </template>
-      <g-button>点我</g-button>
-    </g-popover>
-    <g-popover position="left">
-      <template slot="content">
-        <div>popover内容</div>
-      </template>
-      <g-button>点我</g-button>
-    </g-popover>
-    <g-popover position="right">
-      <template slot="content">
-        <div>popover内容</div>
-      </template>
-      <g-button>点我</g-button>
-    </g-popover>
-  </div>
-  <div style="overflow: hidden; padding: 50px;">
-      <g-popover position="bottom" trigger="hover">
-        <template slot="content">
-          <div>popover内容</div>
-        </template>
-        <g-button>点我</g-button>
-      </g-popover>
-      <g-popover position="top">
-        <template slot="content">
-          <div>popover内容</div>
-        </template>
-        <g-button>点我</g-button>
-      </g-popover>
-      <g-popover position="left">
-        <template slot="content">
-          <div>popover内容</div>
-        </template>
-        <g-button>点我</g-button>
-      </g-popover>
-      <g-popover position="right">
-        <template slot="content">
-          <div>popover内容</div>
-        </template>
-        <g-button>点我</g-button>
-      </g-popover>
-    </div>
+  <g-collapse style="margin: 1em">
+    <g-collapse-item title="title1">content1</g-collapse-item>
+    <g-collapse-item title="title2">content2</g-collapse-item>
+    <g-collapse-item title="title3">content3</g-collapse-item>
+  </g-collapse>
 </div>
     <script src="./src/app.js"></script>
 </body>
