--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <div id="app">
-  <g-collapse style="margin: 1em">
+  <g-collapse style="margin: 1em" single>
     <g-collapse-item title="title1">content1</g-collapse-item>
     <g-collapse-item title="title2">content2</g-collapse-item>
     <g-collapse-item title="title3">content3</g-collapse-item>
