--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
 <div id="app">
-  <g-collapse style="margin: 1em" single>
-    <g-collapse-item title="title1">content1</g-collapse-item>
-    <g-collapse-item title="title2">content2</g-collapse-item>
-    <g-collapse-item title="title3">content3</g-collapse-item>
+  <g-collapse style="margin: 1em" :selected.sync="selectedTab">
+    <g-collapse-item title="title1" name="1">content1</g-collapse-item>
+    <g-collapse-item title="title2" name="2">content2</g-collapse-item>
+    <g-collapse-item title="title3" name="3">content3</g-collapse-item>
   </g-collapse>
 </div>
     <script src="./src/app.js"></script>
